// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Production Build SSR > 'CSS modules' 1`] = `
<link
  rel="stylesheet"
  href="/assets/client-entry-[hash].css"
>
<div class="_container_[css-module-hash]_2">
  CSS Module
</div>
`;

exports[`Production Build SSR > 'Component in subdirectory' 1`] = `
<link
  rel="stylesheet"
  href="/assets/client-entry-[hash].css"
>
<div>
  Subdirectory Page
</div>
`;

exports[`Production Build SSR > 'Component with CSS' 1`] = `
<link
  rel="stylesheet"
  href="/assets/client-entry-[hash].css"
>
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <h1>
    Styled Page
  </h1>
  <vue-island entry="/assets/StyledCounter-[hash].js">
    <button data-v-[scoped]>
      Styled Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Component with island' 1`] = `
<link
  rel="stylesheet"
  href="/assets/client-entry-[hash].css"
>
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <h1>
    Page
  </h1>
  <vue-island entry="/assets/Counter-[hash].js">
    <button>
      Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Component with props' 1`] = `
<link
  rel="stylesheet"
  href="/assets/client-entry-[hash].css"
>
<div>
  Hello Props
</div>
`;

exports[`Production Build SSR > 'Full HTML document with head/body' 1`] = `
<html>
  <head>
    <title>
      Test Document
    </title>
    <link
      rel="stylesheet"
      href="/assets/client-entry-[hash].css"
    >
    <script
      type="module"
      src="/assets/custom-element-[hash].js"
      async
    >
    </script>
  </head>
  <body>
    <h1>
      Document
    </h1>
    <vue-island entry="/assets/Counter-[hash].js">
      <button>
        Count: 0
      </button>
    </vue-island>
  </body>
</html>
`;

exports[`Production Build SSR > 'Island with props' 1`] = `
<link
  rel="stylesheet"
  href="/assets/client-entry-[hash].css"
>
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <vue-island
    entry="/assets/Counter-[hash].js"
    serialized-props="{&quot;count&quot;:42,&quot;label&quot;:&quot;Click me&quot;}"
  >
    <button label="Click me">
      Count: 42
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Multiple islands on the same page' 1`] = `
<link
  rel="stylesheet"
  href="/assets/client-entry-[hash].css"
>
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <vue-island entry="/assets/CounterA-[hash].js">
    <button>
      Counter A
    </button>
  </vue-island>
  <vue-island entry="/assets/CounterB-[hash].js">
    <button>
      Counter B
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Named export' 1`] = `
<link
  rel="stylesheet"
  href="/assets/client-entry-[hash].css"
>
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<!--[-->
<div>
  island
</div>
<div>
  server
</div>
<vue-island entry="/assets/NamedExportIsland-[hash].js">
  <div>
    Named Export Island
  </div>
</vue-island>
<div>
  Named Export Server
</div>
`;

exports[`Production Build SSR > 'Nested island' 1`] = `
<link
  rel="stylesheet"
  href="/assets/client-entry-[hash].css"
>
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <vue-island entry="/assets/Outer-[hash].js">
    <div class="outer">
      <span>
        Outer
      </span>
      <span class="inner">
        Inner
      </span>
    </div>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Non-ascii file name' 1`] = `
<link
  rel="stylesheet"
  href="/assets/client-entry-[hash].css"
>
<p>
  Non-ascii file name
</p>
`;

exports[`Production Build SSR > 'Server component with slot' 1`] = `
<link
  rel="stylesheet"
  href="/assets/client-entry-[hash].css"
>
<div class="layout">
  <header>
    Header
  </header>
  <main>
    <!--[-->
    <p>
      Page content
    </p>
  </main>
  <footer>
    Footer
  </footer>
</div>
`;

exports[`Production Build SSR > 'Static component rendering' 1`] = `
<link
  rel="stylesheet"
  href="/assets/client-entry-[hash].css"
>
<div>
  Hello World
</div>
`;

exports[`Production Build SSR > Build output files 1`] = `
[
  "assets/Counter-[hash].js",
  "assets/CounterA-[hash].js",
  "assets/CounterB-[hash].js",
  "assets/Inner-[hash].js",
  "assets/NamedExportIsland-[hash].js",
  "assets/Outer-[hash].js",
  "assets/StyledCounter-[hash].js",
  "assets/_plugin-vue_export-helper-[hash].js",
  "assets/client-entry-[hash].css",
  "assets/custom-element-[hash].js",
  "assets/vue.runtime.esm-bundler-[hash].js",
]
`;

exports[`Production Build SSR > Build output files 2`] = `
{
  "cssMap": {},
  "entryCss": [
    "assets/client-entry-[hash].css",
  ],
  "jsMap": {
    "../../../../node_modules/.pnpm/vue@3.5.29_typescript@5.9.3/node_modules/vue/dist/vue.runtime.esm-bundler.js": "assets/vue.runtime.esm-bundler-[hash].js",
    "../../../../src/client/custom-element.ts": "assets/custom-element-[hash].js",
    "components/Counter.vue": "assets/Counter-[hash].js",
    "components/CounterA.vue": "assets/CounterA-[hash].js",
    "components/CounterB.vue": "assets/CounterB-[hash].js",
    "components/Inner.vue": "assets/Inner-[hash].js",
    "components/NamedExportIsland.vue": "assets/NamedExportIsland-[hash].js",
    "components/Outer.vue": "assets/Outer-[hash].js",
    "components/StyledCounter.vue": "assets/StyledCounter-[hash].js",
  },
}
`;
